deploy/kubectl/production/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: golang-wiki
  namespace: jason-lab
spec:
  selector:
    matchLabels:
      app: golang-wiki
  replicas: 3
  template:
    metadata:
      labels:
        app: golang-wiki
    spec:
      containers:
      - name: golang-wiki
        image: json0/go-reference-app:honey
        ports:
        - containerPort: 8082
